kustomization/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1 # default replicas, overridden in overlays
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: europe-central2-docker.pkg.dev/weather-app-demo-447410/backend-application-python/backend:1.0.4-a
          ports:
            - containerPort: 5000
