kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: dev-app-service
            port:
              number: 5000
        path: /
        pathType: Prefix
